:white_check_mark: Primeira versão do template de provas ok

--- a/Provas/prova.tex
+++ b/Provas/prova.tex
@@ -62,5 +62,20 @@
 	\end{center}
 	\begin{itemize}
 		\item Primeira recomendação.
+		\item Segunda recomendação.
+		\item Terceira recomendação.
+		\item Quarta recomendação.
+		\item Quinta recomendação.
 	\end{itemize}
+	% Passando a linha
+	\rule[0.1ex]{\textwidth}{1pt}
+	\begin{center}
+		{\LARGE Questionário}
+	\end{center}
+	\begin{questions}
+		\question ({\color{blue} 2.5 pontos}) Quem é o autor do necronomicon?
+		\question ({\color{blue} 2.5 pontos}) Quem é Nyarlathotep?
+		\question ({\color{blue} 2.5 pontos}) Qual o nome da cidade submersa do deus Cthulhu?
+		\question ({\color{blue} 2.5 pontos}) Qual o nome do marinho que encontrou a ilha do Dagon?
+	\end{questions}
 \end{document}      
